--- a/Makefile.am
+++ b/Makefile.am
@@ -37,10 +37,12 @@ SUBDIRS = \
 RCS_FIND_IGNORE = \( -name SCCS -o -name BitKeeper -o -name .svn -o \
 		-name CVS -o -name .pc -o -name .hg -o -name .git \) -prune -o
 
+if BUILD_HWCLOCK
+SUBDIRS += hwclock
+endif
+
 if LINUX
-SUBDIRS += \
-	hwclock \
-	partx
+SUBDIRS += partx
 endif
 
 if BUILD_INIT
