--- a/hwclock/Makefile.am
+++ b/hwclock/Makefile.am
@@ -4,8 +4,12 @@ dist_man_MANS = hwclock.8
 
 sbin_PROGRAMS = hwclock
 
-hwclock_SOURCES = hwclock.c cmos.c rtc.c kd.c clock.h
+hwclock_SOURCES = hwclock.c cmos.c kd.c clock.h
 hwclock_LDADD =
+
+if LINUX
+hwclock_SOURCES += rtc.c
+endif
 
 if HAVE_AUDIT
 hwclock_LDADD += -laudit
