--- a/misc-utils/Makefile.am
+++ b/misc-utils/Makefile.am
@@ -57,6 +57,7 @@ lsblk_SOURCES = lsblk.c \
 		$(top_srcdir)/lib/canonicalize.c \
 		$(top_srcdir)/lib/ismounted.c \
 		$(top_srcdir)/lib/tt.c \
+		$(top_srcdir)/lib/mbsalign.c \
 		$(top_srcdir)/lib/strutils.c
 lsblk_LDADD = $(ul_libblkid_la)
 lsblk_CFLAGS = $(AM_CFLAGS) -I$(ul_libblkid_incdir)
@@ -76,7 +77,7 @@ bin_PROGRAMS += findmnt
 dist_man_MANS += findmnt.8
 findmnt_LDADD = $(ul_libmount_la)
 findmnt_CFLAGS = $(AM_CFLAGS) -I$(ul_libmount_incdir)
-findmnt_SOURCES = findmnt.c $(top_srcdir)/lib/tt.c
+findmnt_SOURCES = findmnt.c $(top_srcdir)/lib/tt.c $(top_srcdir)/lib/mbsalign.c
 if !HAVE_LANGINFO
 findmnt_SOURCES += $(top_srcdir)/lib/langinfo.c
 endif
