--- a/shlibs/blkid/src/blkid.h.in
+++ b/shlibs/blkid/src/blkid.h.in
@@ -186,6 +186,7 @@ extern int blkid_safe_string(const char *str, char *str_safe, size_t len);
 extern int blkid_send_uevent(const char *devname, const char *action);
 extern char *blkid_evaluate_tag(const char *token, const char *value,
 				blkid_cache *cache);
+extern char *blkid_evaluate_spec(const char *spec, blkid_cache *cache);
 
 /* probe.c */
 extern blkid_probe blkid_new_probe(void);
