libmount: support /run/mount rather than /dev/.mount
The /run directory should be preferred on distributions where this
directory exists.

http://thread.gmane.org/gmane.linux.redhat.fedora.devel/146976

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/shlibs/mount/src/libmount.h.in
+++ b/shlibs/mount/src/libmount.h.in
@@ -91,7 +91,7 @@ struct libmnt_table;
 /**
  * libmnt_update
  *
- * /etc/mtab or /dev/.mount/utab update description
+ * /etc/mtab or utab update description
  */
 struct libmnt_update;
 
