--- a/shlibs/mount/src/libmount.h.in
+++ b/shlibs/mount/src/libmount.h.in
@@ -439,7 +439,7 @@ extern int mnt_context_do_umount(struct libmnt_context *cxt);
 #define MNT_MS_LOOP     (1 << 9)
 #define MNT_MS_NOFAIL   (1 << 10)
 #define MNT_MS_UHELPER  (1 << 11)
-#define MNT_MS_PHELPER  (1 << 12)
+#define MNT_MS_HELPER   (1 << 12)
 
 /*
  * mount(2) MS_* masks (MNT_MAP_LINUX map)
