wall: support --timeout switch (vol 2.)
This is the rest of the commit

	cae7485e59299c4b70ea7e1c7a4206df416701dc

the original patch was committed without man page and Makefile
changes. Sorry.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/term-utils/Makefile.am
+++ b/term-utils/Makefile.am
@@ -53,7 +53,7 @@ endif
 
 if BUILD_WALL
 usrbin_exec_PROGRAMS += wall
-wall_SOURCES = wall.c ttymsg.c ttymsg.h
+wall_SOURCES = wall.c ttymsg.c ttymsg.h $(top_srcdir)/lib/strutils.c
 dist_man_MANS += wall.1
 
 if USE_TTY_GROUP
