libmount: add support for x-* mount comments
The current way how add any comment or extra information to /etc/fstab
is to use comment="" mount option. This is not too elegant and readable
if you want to add more than one comment.

It seems better to add any generic prefix that will be used for all
3rd-party userspace mount options.

Expected syntax is:

  x-<application>-<options>[=<data>]

For example:

  x-systemd-bar=managed

All x-* options (as well as comment=) are ignored by libmount and not
stored to the mtab file.

Requested-by: Lennart Poettering <lennart@poettering.net>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/shlibs/mount/src/libmount.h.in
+++ b/shlibs/mount/src/libmount.h.in
@@ -73,6 +73,7 @@ struct libmnt_optmap
  */
 #define MNT_INVERT	(1 << 1) /* invert the mountflag */
 #define MNT_NOMTAB	(1 << 2) /* skip in the mtab option string */
+#define MNT_PREFIX	(1 << 3) /* prefix used for some options (e.g. "x-foo") */
 
 /**
  * libmnt_fs:
@@ -438,6 +439,7 @@ extern int mnt_context_set_syscall_status(struct libmnt_context *cxt, int status
 #define MNT_MS_NOFAIL   (1 << 10)
 #define MNT_MS_UHELPER  (1 << 11)
 #define MNT_MS_HELPER   (1 << 12)
+#define MNT_MS_XCOMMENT (1 << 13)
 
 /*
  * mount(2) MS_* masks (MNT_MAP_LINUX map)
