--- a/shlibs/mount/src/libmount.h.in
+++ b/shlibs/mount/src/libmount.h.in
@@ -320,6 +320,28 @@ extern int mnt_update_force_rdonly(struct libmnt_update *upd, int rdonly);
 extern const char *mnt_update_get_filename(struct libmnt_update *upd);
 extern struct libmnt_fs *mnt_update_get_fs(struct libmnt_update *upd);
 
+/* tab_diff.c */
+enum {
+	MNT_TABDIFF_MOUNT = 1,
+	MNT_TABDIFF_UMOUNT,
+	MNT_TABDIFF_MOVE,
+	MNT_TABDIFF_REMOUNT,
+	MNT_TABDIFF_PROPAGATION,	/* not implemented yet (TODO) */
+};
+
+extern struct libmnt_tabdiff *mnt_new_tabdiff(void);
+extern void mnt_free_tabdiff(struct libmnt_tabdiff *df);
+
+extern int mnt_diff_tables(struct libmnt_tabdiff *df,
+			   struct libmnt_table *old,
+			   struct libmnt_table *new);
+
+extern int mnt_tabdiff_next_change(struct libmnt_tabdiff *df,
+				   struct libmnt_iter *itr,
+				   struct libmnt_fs **old_fs,
+				   struct libmnt_fs **new_fs,
+				   int *oper);
+
 /* context.c */
 
 /* mode for mount options from fstab */
