--- a/tests/commands.sh.in
+++ b/tests/commands.sh.in
@@ -22,6 +22,7 @@ TS_HELPER_LIBMOUNT_UTILS="$top_builddir/shlibs/mount/src/test_utils"
 TS_HELPER_LIBMOUNT_LOCK="$top_builddir/shlibs/mount/src/test_lock"
 TS_HELPER_LIBMOUNT_UPDATE="$top_builddir/shlibs/mount/src/test_tab_update"
 TS_HELPER_LIBMOUNT_CONTEXT="$top_builddir/shlibs/mount/src/test_context"
+TS_HELPER_LIBMOUNT_TABDIFF="$top_builddir/shlibs/mount/src/test_tab_diff"
 
 # TODO: use partx
 TS_HELPER_PARTITIONS="$top_builddir/shlibs/blkid/samples/partitions"
