lib: [procutils.c]: general purpose procfs parsing functions
We include the following functions as a first approach:

  - proc_open_tasks(): allocate resources and setup basic data
  - proc_next_tid(): iterate over the thread group
  - proc_close_tasks(): free used resources

[kzak@redhat.com: - free() on error in proc_open_tasks(),
                  - always call free() in proc_close_tasks()
                  - ignore non-digit dirs and return 1 on end-of-dir
                    in proc_next_tid()]

Signed-off-by: Davidlohr Bueso <dave@gnu.org>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -3,7 +3,7 @@ include $(top_srcdir)/config/include-Makefile.am
 AM_CPPFLAGS += -DTEST_PROGRAM
 
 noinst_PROGRAMS = test_blkdev test_ismounted test_wholedisk test_mangle \
-		  test_tt test_canonicalize test_at test_strutils
+		  test_tt test_canonicalize test_at test_strutils test_procutils
 if LINUX
 if HAVE_CPU_SET_T
 noinst_PROGRAMS += test_cpuset
@@ -16,6 +16,7 @@ test_wholedisk_SOURCES = wholedisk.c
 test_mangle_SOURCES = mangle.c
 test_at_SOURCES = at.c
 test_strutils_SOURCES = strutils.c
+test_procutils_SOURCES = procutils.c
 if LINUX
 test_cpuset_SOURCES = cpuset.c
 endif
