--- a/shlibs/blkid/src/Makefile.am
+++ b/shlibs/blkid/src/Makefile.am
@@ -29,7 +29,9 @@ libblkid_la_SOURCES = cache.c dev.c devname.c devno.c getsize.c llseek.c  \
 		     $(top_srcdir)/lib/crc32.c \
 		     $(top_srcdir)/include/list.h \
 		     $(top_srcdir)/lib/env.c \
-		     $(top_srcdir)/lib/strutils.c
+		     $(top_srcdir)/lib/strutils.c \
+		     $(top_srcdir)/lib/at.c \
+		     $(top_srcdir)/lib/sysfs.c
 
 nodist_libblkid_la_SOURCES = blkid.h
 
