build-sys: add required files to dist
Files mkfs.h procutils.h sysfs.h where missing from dist file.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -20,9 +20,11 @@ dist_noinst_HEADERS = \
 	md5.h \
 	nls.h \
 	pathnames.h \
+	procutils.h \
 	setproctitle.h \
 	strutils.h \
 	swapheader.h \
+	sysfs.h \
 	tt.h \
 	usleep.h \
 	wholedisk.h \
