build-sys: stop building line(1) by default
Align build system behaviour with DEPRECATED file.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/configure.ac
+++ b/configure.ac
@@ -989,6 +989,11 @@ AC_ARG_ENABLE([last],
 )
 AM_CONDITIONAL(BUILD_LAST, test "x$enable_last" = xyes)
 
+AC_ARG_ENABLE([line],
+  AS_HELP_STRING([--enable-line], [build line]),
+  [], enable_line=no
+)
+AM_CONDITIONAL(BUILD_LINE, test "x$enable_line" = xyes)
 
 AC_ARG_ENABLE([mesg],
   AS_HELP_STRING([--enable-mesg], [build mesg]),
