build-sys: use AUTOMAKE_OPTIONS = gnu
The change will cause make dist to have INSTALL file from
automake release, which hopefully is more up to date than
manually maintained version.

The gnu option will also require ChangeLog to be present, and
without doubts no-one wants to maintain that manually. I added
file to reference link to internet git repository view.

At the time of make dist current tag is added to the ChangeLog
reference which will make release to point exactly to the point
where changes ended. Minor drawback is that untagged make dist
releases will contain a broken link in ChangeLog.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/Makefile.am
+++ b/Makefile.am
@@ -57,6 +57,7 @@ if BUILD_FSCK
 SUBDIRS += fsck
 endif
 
+AUTOMAKE_OPTIONS = gnu
 ACLOCAL_AMFLAGS = -I m4
 
 EXTRA_DIST = \
@@ -75,6 +76,8 @@ EXTRA_DIST = \
 # tarball, and never in a checked-out repository.
 dist-hook:
 	echo $(VERSION) > $(distdir)/.tarball-version
+# Set ChangeLog tag reference.
+	sed -i "s/log/log;h=$(VERSION)/" $(distdir)/ChangeLog
 
 distclean-local:
 	-find . -name \*~ -o -name \*.orig -o -name \*.rej | xargs rm -f
