col: check with strtol_or_err option argument
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/text-utils/Makefile.am
+++ b/text-utils/Makefile.am
@@ -6,6 +6,8 @@ usrbin_exec_PROGRAMS = col colcrt colrm column hexdump rev tailf
 
 column_SOURCES = column.c $(top_srcdir)/lib/strutils.c
 
+col_SOURCES = col.c $(top_srcdir)/lib/strutils.c
+
 hexdump_SOURCES = hexdump.c conv.c display.c hexsyntax.c parse.c \
 		  hexdump.h $(top_srcdir)/lib/strutils.c
 
