hwclock: Don't use asm/io.h if sys/io.h can't be found
[kzak@redhat.com: - check for obsolete asm/io.h in configure.ac]

Signed-off-by: Josiah Worcester <josiahw@gmail.com>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -135,6 +135,7 @@ AC_CHECK_HEADERS(
         netinet/in.h \
 	rpcsvc/nfs_prot.h \
 	stdlib.h \
+	asm/io.h \
 	sys/disk.h \
 	sys/disklabel.h \
 	sys/ioctl.h \
