build-sys: use top-level directory for libuuid rather than shlibs/uuid
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@ include $(top_srcdir)/config/include-Makefile.am
 SHLIBS_DIRS =
 
 if BUILD_LIBUUID
-SHLIBS_DIRS += shlibs/uuid
+SHLIBS_DIRS += libuuid
 endif
 
 if BUILD_LIBBLKID
