build-sys: use top-level directory for libmount rather than shlibs/mount
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,7 +11,7 @@ SHLIBS_DIRS += shlibs/blkid
 endif
 
 if BUILD_LIBMOUNT
-SHLIBS_DIRS += shlibs/mount
+SHLIBS_DIRS += libmount
 endif
 
 MAN_DIRS = man/ru
