--- a/configure.ac
+++ b/configure.ac
@@ -1235,13 +1235,13 @@ shlibs/blkid/src/superblocks/Makefile
 shlibs/blkid/src/topology/Makefile
 shlibs/blkid/src/partitions/Makefile
 shlibs/blkid/samples/Makefile
-shlibs/mount/mount.pc
-shlibs/mount/Makefile
-shlibs/mount/src/Makefile
-shlibs/mount/src/libmount.h
-shlibs/mount/docs/Makefile
-shlibs/mount/docs/version.xml
-shlibs/mount/samples/Makefile
+libmount/mount.pc
+libmount/Makefile
+libmount/src/Makefile
+libmount/src/libmount.h
+libmount/docs/Makefile
+libmount/docs/version.xml
+libmount/samples/Makefile
 libuuid/uuid.pc
 libuuid/Makefile
 libuuid/man/Makefile
