--- a/libmount/src/libmount.h.in
+++ b/libmount/src/libmount.h.in
@@ -466,6 +466,8 @@ extern int mnt_context_set_syscall_status(struct libmnt_context *cxt, int status
 #define MNT_MS_UHELPER  (1 << 11)
 #define MNT_MS_HELPER   (1 << 12)
 #define MNT_MS_XCOMMENT (1 << 13)
+#define MNT_MS_OFFSET   (1 << 14)
+#define MNT_MS_SIZELIMIT (1 << 15)
 
 /*
  * mount(2) MS_* masks (MNT_MAP_LINUX map)
