misc-utils: remove misleading README files
Clean up of files which primarily caused confusion.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/misc-utils/Makefile.am
+++ b/misc-utils/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/config/include-Makefile.am
 
-EXTRA_DIST = README.flushb uuidd.rc
+EXTRA_DIST = uuidd.rc
 
 bin_PROGRAMS =
 sbin_PROGRAMS =
@@ -8,7 +8,7 @@ usrsbin_exec_PROGRAMS =
 
 usrbin_exec_PROGRAMS = cal ddate logger look mcookie namei whereis 
 
-EXTRA_DIST += README.cal README.ddate README.namei README.namei2
+EXTRA_DIST += README.cal README.ddate README.namei
 
 logger_SOURCES = logger.c $(top_srcdir)/lib/strutils.c
 mcookie_SOURCES = mcookie.c $(top_srcdir)/lib/md5.c
