--- a/libmount/samples/Makefile.am
+++ b/libmount/samples/Makefile.am
@@ -3,5 +3,5 @@ include $(top_srcdir)/config/include-Makefile.am
 AM_CPPFLAGS += -I$(ul_libmount_incdir)
 AM_LDFLAGS += $(ul_libmount_la)
 
-noinst_PROGRAMS = mount mountpoint
+noinst_PROGRAMS = mount
 
