cal: argument checking, long options and argument checking
Check numeric user inputs with strtol_on_err. Add long options
with nice looking usage.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/misc-utils/Makefile.am
+++ b/misc-utils/Makefile.am
@@ -89,7 +89,7 @@ findmnt_SOURCES += $(top_srcdir)/lib/langinfo.c
 endif
 endif
 
-cal_SOURCES = cal.c $(top_srcdir)/lib/mbsalign.c
+cal_SOURCES = cal.c $(top_srcdir)/lib/mbsalign.c $(top_srcdir)/lib/strutils.c
 if !HAVE_LANGINFO
 cal_SOURCES += $(top_srcdir)/lib/langinfo.c
 endif
