build-sys: don't try to chgrp write or wall if they are not built
Fix regression from commit 4aa9d65bfa76afd0d886ca410ae83428a490d4ea

Signed-off-by: Marc-Antoine Perennou <Marc-Antoine@Perennou.com>

--- a/term-utils/Makefile.am
+++ b/term-utils/Makefile.am
@@ -67,8 +67,13 @@ endif
 if USE_TTY_GROUP
 if MAKEINSTALL_DO_CHOWN
 install-exec-hook::
-	chgrp tty $(DESTDIR)$(usrbin_execdir)/wall $(DESTDIR)$(usrbin_execdir)/write
-	chmod g+s $(DESTDIR)$(usrbin_execdir)/wall $(DESTDIR)$(usrbin_execdir)/write
-
+if BUILD_WALL
+       chgrp tty $(DESTDIR)$(usrbin_execdir)/wall
+       chmod g+s $(DESTDIR)$(usrbin_execdir)/wall
+endif
+if BUILD_WRITE
+       chgrp tty $(DESTDIR)$(usrbin_execdir)/write
+       chmod g+s $(DESTDIR)$(usrbin_execdir)/write
+endif
 endif
 endif
