--- a/libmount/docs/Makefile.am
+++ b/libmount/docs/Makefile.am
@@ -34,7 +34,7 @@ SCAN_OPTIONS=
 
 # Extra options to supply to gtkdoc-mkdb.
 # e.g. MKDB_OPTIONS=--sgml-mode --output-format=xml
-MKDB_OPTIONS=--sgml-mode --output-format=xml --name-space mount
+MKDB_OPTIONS=--sgml-mode --output-format=xml --name-space mnt
 
 # Extra options to supply to gtkdoc-mktmpl
 # e.g. MKTMPL_OPTIONS=--only-section-tmpl
