--- a/libmount/docs/Makefile.am
+++ b/libmount/docs/Makefile.am
@@ -92,7 +92,7 @@ EXTRA_DIST += version.xml.in
 # Files not to distribute
 # for --rebuild-types in $(SCAN_OPTIONS), e.g. $(DOC_MODULE).types
 # for --rebuild-sections in $(SCAN_OPTIONS) e.g. $(DOC_MODULE)-sections.txt
-#DISTCLEANFILES +=
+DISTCLEANFILES += version.xml
 
 # Comment this out if you want your docs-status tested during 'make check'
 if ENABLE_GTK_DOC
