lscpu: extend --parse functionality
... to allow define output columns, for example:

	$ lscpu --parse=CPU,CORE,NODE,CACHE
	# CPU,Core,Node,L1d:L1i:L2
	0,0,0,0:0:0
	1,1,0,1:1:0

Note that CPU caches are separated by ":" in the new format. The
output for --parse (without the list of the columns) is backwardly
compatible, it means:

	$ lscpu --parse
	# CPU,Core,Socket,Node,,L1d,L1i,L2
	0,0,0,0,,0,0,0
	1,1,0,0,,1,1,0

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/sys-utils/Makefile.am
+++ b/sys-utils/Makefile.am
@@ -19,7 +19,7 @@ dist_man_MANS += dmesg.1 ctrlaltdel.8 cytune.8 setarch.8 \
 
 if HAVE_CPU_SET_T
 usrbin_exec_PROGRAMS += lscpu
-lscpu_SOURCES = lscpu.c $(top_srcdir)/lib/cpuset.c
+lscpu_SOURCES = lscpu.c $(top_srcdir)/lib/cpuset.c $(top_srcdir)/lib/strutils.c
 dist_man_MANS += lscpu.1
 endif
 
