docs: remove README.clear
The clear command has not been part of util-linux since 2.13-pre4
which is Sep 2005 in human format.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/text-utils/Makefile.am
+++ b/text-utils/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/config/include-Makefile.am
 
-EXTRA_DIST = README.clear README.col
+EXTRA_DIST = README.col
 
 usrbin_exec_PROGRAMS = col colcrt colrm column hexdump rev tailf
 
