docs: Documentation directory added
Move readme, licence, change log, relese notes and other
supplementary files to a Documentation directory. This commit
does not change contents of any other but few Makefile.am files.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/Makefile.am
+++ b/Makefile.am
@@ -62,14 +62,9 @@ ACLOCAL_AMFLAGS = -I m4
 EXTRA_DIST = \
 		.version \
 		autogen.sh \
-		README.devel \
 		README.licensing \
-		DEPRECATED \
-		licenses \
-		example.files \
 		po/update-potfiles \
-		tools \
-		docs
+		Documentation
 
 # Arrange so that .tarball-version appears only in the distribution
 # tarball, and never in a checked-out repository.
