--- a/fdisk/Makefile.am
+++ b/fdisk/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/config/include-Makefile.am
 
-EXTRA_DIST = README.fdisk README.cfdisk sfdisk.examples partitiontype.c
+EXTRA_DIST = partitiontype.c
 
 fdisk_common = i386_sys_types.c common.h gpt.c gpt.h \
 	$(top_srcdir)/lib/blkdev.c $(top_srcdir)/lib/wholedisk.c \
